appId: org.cru.godtools.beta
name: LESSON - How to start getting to know your neighbors (lessonneighbor)
tags:
  - generated
  - lesson
  - tool-lessonneighbor
---
- launchApp:
    stopApp: true
- runFlow: ../../../helpers/dismiss_onboarding.yaml
- openLink: "godtools://org.cru.godtools/tool/lesson/lessonneighbor/en"
- runFlow: ../../../helpers/dismiss_open_app_prompt.yaml
- runFlow:
    when:
      visible:
        id: "Lesson Swipe Tutorial"
    commands:
      - tapOn: "Got it"
- assertVisible:
    id: "Lesson"
- assertVisible: "How to start getting to know your neighbors"
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/00-01-title-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/01-02-bulletlist-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/02-03-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/03-04-multchoice-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/04-05-video-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/05-05a-novideo-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/06-06-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/07-07-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/08-08-multchoice-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/09-09-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/10-10-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/11-11-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/12-12-complete-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonneighbor/13-13-resources-json"
