appId: org.cru.godtools.beta
name: Tool screen share - initial screen
tags:
  - tool_screen_share
  - smoke
---
- runFlow: ../../helpers/launch_to_tract.yaml
- tapOn:
    id: "Tool Settings"
- assertVisible:
    id: "Tool Settings"
- tapOn:
    id: "Share Screen"
- assertVisible:
    id: "Tool Screen Share Tutorial"
