appId: org.cru.godtools.beta
name: Launch to tool details via first spotlight tool
---
- launchApp:
    stopApp: true
- runFlow: dismiss_onboarding.yaml
- openLink: "godtools://org.cru.godtools/dashboard/tools"
- runFlow: dismiss_open_app_prompt.yaml
- assertVisible:
    id: "Dashboard Tools"
- tapOn:
    id: "Spotlight Tool - .+"
- assertVisible:
    id: "Tool Details"
